2011-01-22 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-application.c (appli_initialize_manage_options):
	Successively invoke all derived class methods.

	* src/nact/base-application.h (manage_options): Update comment.

	* src/nact/nact-application.c (appli_manage_options): Updated accordingly.

	* src/nact/base-builder.c:
	* src/nact/base-builder.h (base_builder_get_toplevel_by_name):
	Use a const BaseBuilder as argument;

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_get_widget_from_gtk):
	Removed function.

	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h (nact_gtk_utils_get_widget_by_name):
	New function.

	* src/nact/nact-icon-chooser.c (on_destroy): Updated accordingly.

	* src/nact/base-application.c (appli_initialize_unique_app):
	Fix reverse test.

	* src/nact/base-builder.c:
	* src/nact/base-builder.h (base_builder_load_named_toplevel):
	Renamed as base_builder_get_toplevel_by_name().

	* src/nact/base-window.c: Updated accordingly.

2011-01-21 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_peek_widget):
	Renamed as base_window_get_widget_from_gtk().

	* src/nact/nact-icon-chooser.c: Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_get_named_toplevel):
	Renamed as base_window_get_gtk_toplevel_by_name().

	* src/nact/nact-icommand-tab.c: Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_get_toplevel):
	Renamed as base_window_get_gtk_toplevel().

	* src/nact/base-application.c:
	* src/nact/base-assistant.c:
	* src/nact/base-iprefs.c:
	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-confirm-logout.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-ifolders-tab.c: